--- a/Requirements_document/requirements_draft2.tex
+++ b/Requirements_document/requirements_draft2.tex
@@ -189,11 +189,16 @@ Assuming there are issues with the image recognition algorithms under certain co
 \end{figure}
 
 \section{Change Log}
-Updated the requirements of collecting our own data, and what we need to teat specifically in section 1.\\
-Minor grammar issues fixed in section 1 and 2.\\ 
-Updated the specific steps we are also required to do but we didn't realized before in section 3.\\
-Minor changes on the timeline based on what we have done till now\\
-Added change log section.
+\begin{itemize}
+	\item Updated the requirements of collecting our own data, and what we need to teat specifically in section 1.
+	\item Minor grammar issues fixed in section 1 and 2.
+	\item Updated the specific steps we are also required to do but we didn't realized before in section 3.
+	\item Minor changes on the timeline based on what we have done till now
+	\item Added change log section.\\
+
+Xilun Guo works log above.\\
+
+\end{itemize}
 
 
 \end{document}
