Added changes to my section.

--- a/Winter_Midterm_Report/Winter_Midterm_Report.tex
+++ b/Winter_Midterm_Report/Winter_Midterm_Report.tex
@@ -126,7 +126,7 @@ We collected Data and did some background work to prep for the term. Basil attac
 \item Problems: 
 Lack of communication over the break.
 \item Solutions: 
-Started using
+Started using a new chat program to help bridge communication problems.
 \end{itemize}
 
 \subsection{Week 1}
@@ -181,7 +181,26 @@ Meetings with both Jialin and Dr. Li helped when issues arose this week, but not
 \section{Team Members' Work}
 \subsection{Tanner's Work}
 Just to recap, I did most of the progress report work on the weekly breakdown subsection and a large amount of document editing across the board.
-As for work throughout the term I feel that I have been handling the lions share or the communication between client, TA, and instructors. Along with doing a large portion of the technical work on the algorithms and setup. 
+As for work throughout the term I feel that I have been handling the lions share or the communication between client, TA, and instructors. 
+Along with doing a large portion of the technical work on the algorithms and setup. 
+I spent a large chunk of time in the first couple weeks working out communication problems and figuring out how our schedules will line up. 
+Communicated our successes and problems to personnel as needed. 
+Specifically when we started to have trouble with the algorithm functionality.
+\begin{itemize}
+	\item Winter Break: 
+	Did some research into algorithms.
+	\item Week 1: 
+	I put time into getting refreshed on what our plan is for the term. Did a decent amount of organization work, specifically doing a lot of communicating to get our team organized.
+	\item Week 2: 
+	Had multiple discussions and meetings with Dr. Li and Kevin to work out some things and get some ideas. I chose the first algorithm and started doing research on it.
+	\item Week 3:
+	I got a Linux Box from Kevin and spent a solid amount of time during the week getting it setup and ready to be worked on. This of course did not pan out however. 
+	\item Week 4:
+	Personally had a lot of trouble shooting time put into the project. Between trying things and working on libraries within the Steed server.
+	\item Week 5: 
+	Spent a lot of time trying to get the FCN algorithm to work correctly. The Steed server just needed (and still needs) time and effort put in working towards getting the algorithms working.
+\end{itemize}
+
 
 \subsection{Xilun's Work}
 I summarized the current progress including what we have done till now as well as what is the current status we are at. Also, I described what remaining works we have left and what is the plan to accomplished them step by step. 
